@@ -1700,11 +1700,11 @@ int FFmpeg_Transcoder::open_output_filestreams(Buffer *buffer)
             {
                 // Init deinterlace filters
 #if LAVF_DEP_AVSTREAM_CODEC
-                AVPixelFormat pix_fmt = static_cast<AVPixelFormat>(m_out.m_video.m_stream->codecpar->format);
+                AVPixelFormat pix_fmt = static_cast<AVPixelFormat>(m_in.m_video.m_stream->codecpar->format);
 #else
-                AVPixelFormat pix_fmt = static_cast<AVPixelFormat>(m_out.m_video.m_stream->codec->pix_fmt);
+                AVPixelFormat pix_fmt = static_cast<AVPixelFormat>(m_in.m_video.m_stream->codec->pix_fmt);
 #endif
-                ret = init_deinterlace_filters(m_out.m_video.m_codec_ctx, pix_fmt, m_out.m_video.m_stream->avg_frame_rate, m_out.m_video.m_stream->time_base);
+                ret = init_deinterlace_filters(m_in.m_video.m_codec_ctx, pix_fmt, m_in.m_video.m_stream->avg_frame_rate, m_in.m_video.m_stream->time_base);
                 if (ret < 0)
                 {
                     return ret;
@@ -2315,6 +2315,12 @@ int FFmpeg_Transcoder::decode_video_frame(AVPacket *pkt, int *decoded)
 
         if (data_present)
         {
+            frame = send_filters(frame, ret);
+            if (ret)
+            {
+                return ret;
+            }
+
             if (m_sws_ctx != nullptr)
             {
                 AVCodecContext *codec_ctx = m_out.m_video.m_codec_ctx;
@@ -2371,7 +2377,7 @@ int FFmpeg_Transcoder::decode_video_frame(AVPacket *pkt, int *decoded)
 
 #ifndef USING_LIBAV
             frame->pict_type = AV_PICTURE_TYPE_NONE;	// other than AV_PICTURE_TYPE_NONE causes warnings
-            m_video_fifo.push(send_filters(frame, ret));
+            m_video_fifo.push(frame);
 #else
             frame->pict_type = (AVPictureType)0;        // other than 0 causes warnings
             m_video_fifo.push(frame);
@@ -4097,7 +4103,7 @@ const char *FFmpeg_Transcoder::destname() const
 
 #ifndef USING_LIBAV
 // create
-int FFmpeg_Transcoder::init_deinterlace_filters(AVCodecContext *output_codec_context, AVPixelFormat pix_fmt, const AVRational & avg_frame_rate, const AVRational & time_base)
+int FFmpeg_Transcoder::init_deinterlace_filters(AVCodecContext *codec_context, AVPixelFormat pix_fmt, const AVRational & avg_frame_rate, const AVRational & time_base)
 {
     const char * filters;
     char args[1024];
@@ -4132,9 +4138,9 @@ int FFmpeg_Transcoder::init_deinterlace_filters(AVCodecContext *output_codec_con
 
         // buffer video source: the decoded frames from the decoder will be inserted here.
         snprintf(args, sizeof(args), "video_size=%dx%d:pix_fmt=%d:time_base=%d/%d:pixel_aspect=%d/%d",
-                 output_codec_context->width, output_codec_context->height, pix_fmt,
+                 codec_context->width, codec_context->height, pix_fmt,
                  time_base.num, time_base.den,
-                 output_codec_context->sample_aspect_ratio.num, FFMAX(output_codec_context->sample_aspect_ratio.den, 1));
+                 codec_context->sample_aspect_ratio.num, FFMAX(codec_context->sample_aspect_ratio.den, 1));
 
         //AVRational fr = av_guess_frame_rate(m_m_out.m_format_ctx, m_pVideoStream, nullptr);
         //if (fr.num && fr.den)
